--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Home Page Merged</title>
+    <title>MY HTML PROJECT PAGE</title>
     <!-- CSS is placed directly inside the <style> tags -->
     <style>
         /* Basic Reset and Setup */
